--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,68 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
+.products-section {
+    text-align: center;
+    font-family: "Zilla Slab", serif;
+    font-weight: 700;
+    color: #547353;
+}
+
+.products-section h2 {
+    font-size: 35px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.products-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 110px;
+}
+
+.product-item {
+    position: relative;
+    width: 370px;
+    height: 370px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.product-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.1);
+    font-size: 24px;
+    text-align: center;
+}
+
+.product-button {
+    position: absolute;
+    bottom: 110px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    width: 100px;
+    padding: 10px;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    color: #fff;
+    background: transparent;
+    text-align: center;
+    text-decoration: none;
+}
