--- a/styleFeedbacks.css
+++ b/styleFeedbacks.css
@@ -75,36 +75,63 @@ body {
     transform: scaleX(1);
 }
 
+.container {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+    margin-top: 100px; 
+}
+
 .feedback-section {
-    margin: 20px;
+    margin-top: 20px; 
 }
-.feedback {
+
+.section {
     display: flex;
-    align-items: center;
+    align-items: flex-start; 
     margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
     padding: 10px;
-    background-color: #f9f9f9;
-    flex-direction: column;
-    text-align: center;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    flex-wrap: wrap;
+    overflow: hidden;
 }
-.feedback img {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+
+.section img {
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
     object-fit: cover;
-    margin-bottom: 10px;
+    margin-right: 20px;
 }
-.feedback-content {
-    max-width: 600px;
+
+.section img.right {
+    margin-left: 20px;
+    margin-right: 0;
 }
-.feedback-content h3 {
-    margin-top: 0;
-    font-size: 1.2em;
-    color: #333;
+
+.section .text {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    font-size: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
-.feedback-content p {
+
+.section .esquerda {
+    width: 100%;
+    margin-top: 10px; 
+}
+
+.section .direita {
+    width: 100%;
+    margin-top: 10px;
+    text-align: end;
+}
+
+.section h2 {
     margin: 0;
-    color: #555;
+    font-size: 1
 }
