--- a/styles.css
+++ b/styles.css
@@ -397,3 +397,88 @@ body {
     height: 20px;
     margin-right: 10px;
 }
+
+.overlay-image2 {
+    position: absolute;
+    margin-top: -74px;
+    margin-left: 800px;
+    height: 80px;
+    max-height: 100%;
+    overflow: hidden;
+    z-index: 5;
+}
+
+.custom-footer {
+background-color: #F4CAA0;
+padding: 40px 20px;
+font-family: "Zilla Slab", serif;
+font-weight: 700;
+}
+
+.logo-footer img {
+width: auto;
+height: 90px;
+margin-left: 53px;
+margin-bottom: 10px;
+margin-top: 20px;
+}
+
+.footer-container {
+display: flex;
+justify-content: space-between;
+align-items: center;
+max-width: 1200px;
+margin: 0 auto;
+}
+
+.footer-left {
+flex: 1;
+margin-left: 0px;
+}
+
+.footer-center {
+flex: 1;
+text-align: center;
+font-size: 18px;
+color:#5C4634 ;
+}
+
+.footer-right {
+flex: 1;
+text-align: right;
+}
+
+.footer-nav {
+list-style: none;
+padding: 0;
+margin: 0;
+}
+
+.footer-nav li {
+margin-bottom: 10px;
+}
+
+.footer-nav a {
+text-decoration: none;
+color: #5C4634;
+font-weight: bold;
+font-size: 18px;
+}
+
+.social-icons {
+display: flex;
+justify-content: center;
+gap: 20px;
+margin-bottom: 10px;
+}
+
+.social-icons img {
+width: 20px;
+}
+
+.footer-right .criadores {
+color: #5C4634;
+font-weight: bold;
+font-size: 18px;
+margin-left: 20px;
+}
