--- a/styleFeedbacks.css
+++ b/styleFeedbacks.css
@@ -13,7 +13,7 @@ body {
     left: 0;
     width: 100%;
     z-index: 1000;
-    border-bottom:solid #e6e6e6 1px;
+    border-bottom: solid #e6e6e6 1px;
 }
 
 .header .logo {
@@ -44,6 +44,10 @@ body {
     position: relative;
 }
 
+.nav-bar>#atual {
+    color: red;
+}
+
 .nav-bar a {
     color: #000000;
     text-decoration: none;
@@ -58,13 +62,13 @@ body {
     display: block;
     width: 100%;
     height: 2px;
-    background-color:#bb972d;
+    background-color: #bb972d;
     position: absolute;
     bottom: -5px;
     left: 0;
     transform: scaleX(0);
     transition: transform 0.3s ease-in-out;
-    
+
 }
 
 .nav-bar a:hover::after {
@@ -75,65 +79,82 @@ body {
     transform: scaleX(1);
 }
 
-.container {
-    width: 80%;
-    margin: auto;
-    padding: 20px;
-    margin-top: 100px; 
+h2{
+    margin-top: 140px;
+    text-align: center;
+    font-family: "Zilla Slab", serif;
+    font-size: 40px;
+    color: #5C4634;
 }
 
 .feedback-section {
-    margin-top: 20px; 
-}
-
-.section {
-    display: flex;
-    align-items: flex-start; 
-    margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    flex-wrap: wrap;
-    overflow: hidden;
-}
-
-.section img {
-    width: 150px;
-    height: 150px;
-    border-radius: 75px;
-    object-fit: cover;
-    margin-right: 20px;
-}
-
-.section img.right {
-    margin-left: 20px;
-    margin-right: 0;
-}
-
-.section .text {
-    flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center; 
-    font-size: 20px;
-    margin-top: auto;
-    margin-bottom: auto;
+    align-items: center;
+    gap: 20px;
+    margin: 40px 0;
 }
 
-.section .esquerda {
+.feedback-container {
+    display: flex;
+    justify-content: center;
     width: 100%;
-    margin-top: 10px; 
+    margin-bottom: 40px;
 }
 
-.section .direita {
-    width: 100%;
+.feedback-content {
+    display: flex;
+    align-items: center;
+    width: 80%;
+}
+
+.feedback-photo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
+
+.feedback-photo img {
+    border-radius: 50%;
+    border: 5px solid #BD9E1C;
+    width: 150px;
+    height: 150px;
+    object-fit:cover;
+}
+
+.feedback-name {
+    text-align: center;
     margin-top: 10px;
-    text-align: end;
+    font-weight: 700;
+    font-family: "Zilla Slab", serif;
+    font-size: 20px;
 }
 
-.section h2 {
-    margin: 0;
-    font-size: 1
+.feedback-text {
+    max-width: 60%;
+    font-size: 24px;
+    margin: 10px;
+    text-align: justify;
+    font-family: "Zilla Slab", serif;
+    font-style: italic;
+    font-weight: 500;
+}
+
+.feedback-container:nth-child(odd) .feedback-content {
+    flex-direction: row;
+    background-color: #4ec56a;
+    border-radius: 20px;
+}
+
+.feedback-container:nth-child(even) .feedback-content {
+    flex-direction: row-reverse;
+    background-color: #fdc079;
+    border-radius: 20px;
+}
+
+.feedback-container:nth-child(even) .feedback-photo img {
+    border: 5px solid #517050;
 }
 
 .overlay-image2 {
@@ -151,6 +172,7 @@ background-color: #F4CAA0;
 padding: 40px 20px;
 font-family: "Zilla Slab", serif;
 font-weight: 700;
+margin-top: 150px;
 }
 
 .logo-footer img {
